Improvement in models (parentCategory) and adding new functionalities/Corrections in both product and Category service.